# bithotel-casper-contracts

./: .gitignore  Cargo.toml  Makefile  rust-toolchain
.github/workflows/: ci-casper-rust-contract.yml
WIP-cep47/cep47-tests/src/: cep47_instance.rs  cep47_tests.rs
WIP-cep47/cep47/src/: cep47.rs  data.rs
cep78/: Makefile  deploy  rust-toolchain
cep78/client/balance_of_session/: Cargo.toml
cep78/client/get_approved_session/: Cargo.toml
cep78/client/get_approved_session/src/: main.rs
cep78/client/is_approved_for_all_session/: Cargo.toml
cep78/client/mint_session/: Cargo.toml
cep78/client/mint_session/src/: main.rs
cep78/client/minting_contract/src/: main.rs
cep78/client/owner_of_session/: Cargo.toml
cep78/client/owner_of_session/src/: main.rs
cep78/client/transfer_session/: Cargo.toml
cep78/client/transfer_session/src/: main.rs
cep78/client/updated_receipts/: Cargo.toml
cep78/contract/: Cargo.toml
cep78/test-contracts/mangle_named_keys/: Cargo.toml
cep78/test-contracts/minting_contract/: Cargo.toml
cep78/tests/: Cargo.toml
cep78/tests/src/: costs.rs
cep78/tests/src/utility/: constants.rs
marketplace/: Cargo.toml  Makefile  README.md  deploy
marketplace/client/execute_listing_session/: Cargo.toml
marketplace/client/execute_listing_session/src/: call.rs  lib.rs  main.rs
marketplace/client/execute_listing_session/src/structs/: mod.rs  order.rs
marketplace/contract/: Cargo.toml
marketplace/contract/src/: data.rs  enums.rs  error.rs  event.rs  events.rs  lib.rs  marketplace.rs  utils.rs
marketplace/contract/src/enums/: address.rs  category.rs  mod.rs
marketplace/contract/src/interfaces/: icep47.rs  icep78.rs  ierc20.rs  mod.rs
marketplace/contract/src/libs/: address_utils.rs  conversion.rs  merkle_tree.rs  mod.rs
marketplace/contract/src/structs/: dict.rs  order.rs
marketplace/e2e/: .env.example  package.json
marketplace/e2e/src/: buy-sell-order-cspr.ts  cancel-sell-order.ts  create-sell-order.ts  create-user-profile.ts  deploy.ts  get-contract-values.ts  install-contract.ts  run-event-listener.ts  set-acceptable-token.ts  set-fee-wallet.ts  test-sign.ts  utils.ts
marketplace/e2e/src/cep47/: install.ts  mint.ts  run-event-listener.ts  usage.ts
marketplace/e2e/src/clients/: marketplace.ts
marketplace/e2e/src/erc20/: install.ts
marketplace/e2e/src/schema/: asset.model.ts  buyoder.model.ts  collection.model.ts  sellOrder.model.ts  user.model.ts
marketplace/e2e/src/test-data/: nft.json
marketplace/tests/: Cargo.toml
marketplace/tests/src/: cep47_instance.rs  cep78-interface.rs  erc20_instance.rs  lib.rs  marketplace.rs  marketplace_instance.rs  marketplace_test.rs  utils.rs
marketplace/tests/src/tests/: add_listing.rs  admin.rs  cancel_listing.rs  execute_listing.rs  mod.rs  pause.rs  whitelist.rs
marketplace/tests/src/utility/: constants.rs  helpers.rs  marketplace_interface.rs  mod.rs
marketplace/tests/wasm/: balance_of.wasm  cep47-token.wasm  cep78.wasm  erc20_token.wasm  execute_listing_call.wasm  marketplace.wasm  marketplace_contract.wasm  pre_buy_sell_order_cspr.wasm
marketplace/utils/contract-utils/: Cargo.toml
marketplace/utils/contract-utils/src/: admin_control.rs  data.rs  lib.rs  reentrancy_guard.rs
marketplace/utils/test-env/: Cargo.toml
marketplace/utils/test-env/src/: lib.rs  test_contract.rs  test_env.rs  utils.rs
marketplace/wasm/: Cargo.toml
marketplace/wasm/src/: lib.rs
scripts/: env.ts  package.json
scripts/cep78/: .env  approve.ts  mint.ts  package.json  register-owner.ts  types.ts  utils.ts
scripts/marketplace/: add-admin.ts  add-listing.ts  cancel-listing.ts  execute-listing.ts  execute_listing_call.wasm  helpers.ts  package.json  pause.ts  remove-admin.ts  unpause.ts  whitelist.ts
