[package]
name = "marketplace_contract"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = {version = "1.4.4", features = ["test-support"]}
casper-types = "1.5.0"
casper_types_derive = "0.1.0"
serde = { version = "1.0", features = ["derive"], default-features = false  }
casper-serde-json-wasm = { git = "https://github.com/darthsiroftardis/casper-serde-json-wasm", branch = "casper-no-std"}
hex = { version = "0.4.3", default-features = false }

[[bin]]
name = "marketplace_contract"
path = "src/lib.rs"
bench = false
doctest = false
test = false