[package]
name = "hello-world"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"], default-features = false  }
# kunftmarketplace-contract = { path = "../contract"}

casper-types = "1.5.0"